# zfs-rs

./: Cargo.toml  README.md
src/: fletcher.rs  main.rs  zfs.rs
zfs-cli/: Cargo.toml
zfs-cli/src/: main.rs
zfs-rs/: Cargo.toml
zfs-rs/src/: compression.rs  dmu.rs  dsl.rs  lib.rs  spa.rs  zap.rs  zil.rs  zpl.rs
zfsbrowser/: Cargo.toml
zfsbrowser/src/: main.rs
