[package]
name = "zfsbrowser"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
lz4-compression="^0.6.1"
nom = "^5.1.1"
enum-repr-derive = "^0.1.3"
crc = "^2.0"

[patch.crates-io]
crc = { git = "https://github.com/mrhooray/crc-rs" }

